--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                 <div class="profile-section">
                     <div class="profile-image">
                         <div class="profile-placeholder">
-                            Your Professional<br>Photo Here
+                           <img src="Headshot.PNG" alt="Professional headshot of Oisin Moore">
                         </div>
                     </div>
                     <div class="profile-info">
@@ -860,3 +860,4 @@
     </script>
 </body>
 </html>
+
