--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
             <div class="hero-grid">
                 <div class="hero-content">
                     <h1>Oisin Moore</h1>
-                    <div class="role">Technical Sales Engineer</div>
+                    <div class="role">Mechanical Engineer</div>
                     <p class="description">
                         Mechanical Engineer specializing in technical sales, bridging complex engineering 
                         solutions with customer needs. Expert in CAD design, thermodynamics, and process 
@@ -860,4 +860,5 @@
     </script>
 </body>
 </html>
+
 
