--- a/index.html
+++ b/index.html
@@ -792,17 +792,17 @@
             <div class="contact-grid">
                 <div class="contact-item">
                     <div class="contact-icon">📧</div>
-                    <h3>Email</h3>
+                    <h3>oisinmoore2077work@gmail.com</h3>
                     <p>Professional inquiries</p>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">💼</div>
-                    <h3>LinkedIn</h3>
+                    <h3>https://www.linkedin.com/in/oisin-moore-4710a02b3/</h3>
                     <p>Let's connect professionally</p>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">📱</div>
-                    <h3>Available</h3>
+                    <h3>0830115401</h3>
                     <p>Open to opportunities</p>
                 </div>
             </div>
@@ -860,5 +860,6 @@
     </script>
 </body>
 </html>
+
 
 
