--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
             background: linear-gradient(45deg, var(--surface) 0%, var(--surface-elevated) 100%);
         }
 
+        .profile-placeholder img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 18px;
+        }
+
         .profile-info {
             text-align: center;
         }
@@ -795,9 +802,9 @@
                     <h3>oisinmoore2077work@gmail.com</h3>
                     <p>Professional inquiries</p>
                 </div>
-                <div class="contact-item">
+                <div class="contact-item" onclick="window.open('https://www.linkedin.com/in/oisin-moore-4710a02b3/', '_blank')">
                     <div class="contact-icon">💼</div>
-                    <h3>https://www.linkedin.com/in/oisin-moore-4710a02b3/</h3>
+                    <h3>LinkedIn</h3>
                     <p>Let's connect professionally</p>
                 </div>
                 <div class="contact-item">
@@ -860,6 +867,3 @@
     </script>
 </body>
 </html>
-
-
-
