--- a/index.html
+++ b/index.html
@@ -665,8 +665,8 @@
                             <div class="stat-label">Years Experience</div>
                         </div>
                         <div class="stat">
-                            <div class="stat-number">95</div>
-                            <div class="stat-label">Connections</div>
+                            <div class="stat-number">AU/IE</div>
+                            <div class="stat-label">Citizenship</div>
                         </div>
                         <div class="stat">
                             <div class="stat-number">DCU</div>
